--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@
 
     <!-- PRAYER TIMES -->
     <section class="prayer-section" id="prayer">
+        <div class="prayer-pattern"></div>
         <div class="container">
             <div class="prayer-top">
                 <div>
@@ -209,6 +210,7 @@
 
     <!-- GALLERY -->
     <section class="gallery-section">
+        <div class="gallery-pattern"></div>
         <div class="container">
             <div style="display:flex;align-items:flex-end;justify-content:space-between;margin-bottom:50px;flex-wrap:wrap;gap:16px;">
                 <div><span class="section-label reveal">Moments</span><h2 class="section-title reveal" style="color:var(--white);margin-bottom:0;">Community <em style="color:var(--gold-light)">Gallery</em></h2></div>
@@ -255,7 +257,7 @@
                         <button class="amount-pill" onclick="setAmount(250,this)">$250</button>
                     </div>
                 </div>
-                <div class="donate-form-box reveal reveal-delay-2">
+                <div class="donate-form-box reveal reveal-delay-2" style="position:relative;overflow:hidden;"><div class="donate-box-pattern"></div>
                     <h3>Donate Today</h3>
                     <div style="display:flex;gap:8px;margin-bottom:20px;">
                         <button onclick="setCurrency('CAD')" id="btnCAD" style="flex:1;padding:10px;background:rgba(201,168,76,0.15);border:1px solid var(--gold);color:var(--gold);font-family:Cinzel,serif;font-size:0.75rem;letter-spacing:0.12em;cursor:pointer;transition:all 0.3s;">CAD</button>
@@ -284,6 +286,7 @@
     </section>
 
     <footer class="footer">
+        <div class="footer-pattern"></div>
         <div class="container">
             <div class="footer-grid">
                 <div class="footer-brand"><span class="logo-text-footer">Rahma Islamic Centre</span><p>A vibrant Islamic center dedicated to the spiritual, educational, and social needs of Muslims in Winnipeg since 2016.</p><div class="footer-social"><a href="#"><i class="fab fa-facebook-f"></i></a><a href="#"><i class="fab fa-youtube"></i></a><a href="#"><i class="fab fa-instagram"></i></a></div></div>
